# AEGIS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data_population.yaml
data/: README.md
docs/: architecture.md  problem_statement.md
docs/audits/: alert_stream_leakage_audit.md  data_pipeline_audit.md
docs/data/: field_definitions.md  provenance.md  selection_function.md
docs/decisions/: 001-dataset-selection.md  002-case-study-classes.md  003-definitions-and-metrics.md  004-proxy-spectroscopic-selection.md
docs/results/data_audit/: class_retention_analysis.json  dataset_integrity_report.json  distributional_shift_metrics.csv  distributional_shift_metrics.json  sensitivity_analysis_results.json
scripts/: ingest_population.py
src/aegis/: __init__.py
src/aegis/config/: __init__.py  data.py
src/aegis/data/: __init__.py  ingest.py  manifest.py  observation.py  population.py  schema.py
src/aegis/decision/: __init__.py
src/aegis/evaluation/: __init__.py
src/aegis/features/: __init__.py
src/aegis/models/: __init__.py
tests/: test_config.py  test_observation_properties.py  test_observation_regression.py  test_package.py  test_population.py  test_schema.py
