[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[project]
name = "aegis-transients"
version = "0.1.0"
description = "Research framework for calibrated early transient follow-up decisions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ghanashyam", email = "ghanashyamvn@gmail.com" }]
dependencies = ["pydantic>=2.10,<3"]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "ruff>=0.9,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aegis --cov-report=term-missing --cov-fail-under=0"
