[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[project]
name = "aegis-transients"
version = "0.1.0"
description = "Research framework for calibrated early transient follow-up decisions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ghanashyam", email = "ghanashyamvn@gmail.com" }]
dependencies = [
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "pandera>=0.23,<1",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pandas-stubs>=3.0.3.260530",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "ruff>=0.9,<1",
  "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aegis --cov-report=term-missing --cov-fail-under=0"
